--- a/elements/header.html
+++ b/elements/header.html
@@ -102,7 +102,7 @@
 <div class="icon-adjust"><i class="fas fa-search"></i></div>
 </div>
 <div class="search-bar-side2">
-  {% element 'snippets/customer' %}
+  {% element 'snippets/customer-front' %}
 <div class="icon-adjust"><i class="fas fa-user"></i></div>
 </div>
 <div class="search-bar-side3">
