--- a/elements/snippets/customer-front.html
+++ b/elements/snippets/customer-front.html
@@ -3,7 +3,7 @@
         <div class="col-sm-7 col-md-6 login" data-tray-tst="saudacao">
             <span class="tray-hide" data-logged-user="true">
                 {{ Translation('bem_vindo_central') }} <span data-customer="name"></span>,
-                <li><a href="{{ links.logout }}">{{ Translation('sair') }}</a></li>
+                <a href="{{ links.logout }}">{{ Translation('sair') }}</a>
             </span>
             <span class="tray-hide" data-logged-user="false">
                 {{ Translation('bem_vindo_central') }}, <a href="{{ links.login }}" data-tray-tst="login" class="{{ utils.is_https ? 'modal-login' }}">{{ Translation('login') }}</a> {{ Translation('ou') }} <a href="{{ links.register }}" data-tray-tst="cadastro">{{ Translation('cadastre_se') }}</a>
