--- a/elements/header.html
+++ b/elements/header.html
@@ -103,7 +103,7 @@
 </div>
 <div class="search-bar-side2">
   {% element 'snippets/customer-front' %}
-<div class="icon-adjust"><i class="fas fa-user"></i></div>
+<div class="icon-adjust"><i class="tray-hide fas fa-user" data-logged-user="false"></i><i class="tray-hide fas fa-user"data-logged-user="true" style="color: white;"></i></div>
 </div>
 <div class="search-bar-side3">
   {% element 'snippets/cart-front' %}
