--- a/elements/header.html
+++ b/elements/header.html
@@ -104,7 +104,7 @@
 <div class="search-bar-side2">
   {% element 'snippets/customer-front' %}
 <div class="icon-adjust"><i class="tray-hide fas fa-user" data-logged-user="false"></i>
-  <a href="{{ links.orders }}"><i class="tray-hide fas fa-user"data-logged-user="true" style="color: white;"><span class="my-account-login">CONTA</span></i></a></div>
+  <a href="{{ links.orders }}"><i class="tray-hide fas fa-user my-account-login"data-logged-user="true" style="color: white;"><span>CONTA</span></i></a></div>
 </div>
 <div class="search-bar-side3">
   {% element 'snippets/cart-front' %}
