--- a/elements/header.html
+++ b/elements/header.html
@@ -101,11 +101,11 @@
   {% element 'snippets/search-main' %}
 <div class="icon-adjust"><i class="fas fa-search"></i></div>
 </div>
-<div class="search-bar-side2">
+<div class="search-bar-side2 my-account-login">
   {% element 'snippets/customer-front' %}
 <div class="icon-adjust">
   <i class="tray-hide fas fa-user" data-logged-user="false"></i>
-  <a href="{{ links.orders }}"><i class="tray-hide fas fa-user my-account-login"data-logged-user="true" style="color: white;"><span>CONTA</span></i></a></div>
+  <a href="{{ links.orders }}"><i class="tray-hide fas fa-user"data-logged-user="true" style="color: white;"><span>CONTA</span></i></a></div>
 </div>
 <div class="search-bar-side3">
   {% element 'snippets/cart-front' %}
