--- a/elements/header.html
+++ b/elements/header.html
@@ -102,11 +102,11 @@
 <div class="icon-adjust"><i class="fas fa-search"></i></div>
 </div>
 <div class="search-bar-side2 my-account-login">
-  <span class="tray-hide fas fa-user" data-logged-user="false">CONTA</span>
+  <span class="tray-hide" data-logged-user="false">CONTA</span>
   {% element 'snippets/customer-front' %}
 <div class="icon-adjust">
   <i class="tray-hide fas fa-user" data-logged-user="false"></i>
-  <a href="{{ links.orders }}"><i class="tray-hide fas fa-user"data-logged-user="true" style="color: white;"></i></a></div>
+  <a href="{{ links.orders }}"><i class="tray-hide fas fa-user" data-logged-user="true" style="color: white;"></i></a></div>
 </div>
 <div class="search-bar-side3">
   {% element 'snippets/cart-front' %}
