--- a/elements/header.html
+++ b/elements/header.html
@@ -102,7 +102,7 @@
 <div class="icon-adjust"><i class="fas fa-search"></i></div>
 </div>
 <div class="search-bar-side2 my-account-login">
-  <span class="tray-hide" data-logged-user="false">CONTA</span>
+  <span class="tray-hide" data-logged-user="true">CONTA</span>
   {% element 'snippets/customer-front' %}
 <div class="icon-adjust">
   <i class="tray-hide fas fa-user" data-logged-user="false"></i>
