--- a/elements/header.html
+++ b/elements/header.html
@@ -99,7 +99,7 @@
   <div class="side-bar-holder">
 <div class="search-bar-side">
   {% element 'snippets/search-main' %}
-<div class="icon-adjust"><i class="fas fa-search"></i></div>
+<div class="icon-adjust icon-add"><i class="fas fa-search"></i></div>
 </div>
 <div class="search-bar-side2 my-account-login">
   <span class="tray-hide" data-logged-user="true">CONTA</span>
@@ -110,7 +110,7 @@
 </div>
 <div class="search-bar-side3">
   {% element 'snippets/cart-front' %}
-<div class="icon-adjust"><i class="fas fa-shopping-cart"></i></div>
+<div class="icon-adjust icon-add"><i class="fas fa-shopping-cart"></i></div>
 </div>
   </div>
 </section>
