--- a/elements/header-small.html
+++ b/elements/header-small.html
@@ -95,4 +95,21 @@
     </div>
   </div>
   <div class="mobile-menu animated rotateIn"><span class="fas fa-bars"></span></div>
+  <div class="side-bar-holder">
+<div class="search-bar-side">
+  {% element 'snippets/search-main' %}
+<div class="icon-adjust icon-add"><i class="fas fa-search"></i></div>
+</div>
+<div class="search-bar-side2 my-account-login">
+  <span class="tray-hide" data-logged-user="true">CONTA</span>
+  {% element 'snippets/customer-front' %}
+<div class="icon-adjust">
+  <i class="tray-hide fas fa-user" data-logged-user="false"></i>
+  <a href="{{ links.orders }}"><i class="tray-hide fas fa-user" data-logged-user="true" style="color: white;"></i></a></div>
+</div>
+<div class="search-bar-side3">
+  {% element 'snippets/cart-front' %}
+<div class="icon-adjust icon-add"><i class="fas fa-shopping-cart"></i></div>
+</div>
+  </div>
 </section>
