--- a/elements/snippets/customer-front.html
+++ b/elements/snippets/customer-front.html
@@ -6,7 +6,7 @@
                 <a class="costumer-logged-in" href="{{ links.logout }}" style="color: white !important;"><i class="fas fa-door-open logout-icon"></i><br>{{ Translation('sair') }}</a>
             </span>
             <span class="tray-hide" data-logged-user="false">
-                {{ Translation('bem_vindo_central') }}, <a href="{{ links.login }}" data-tray-tst="login" class="{{ utils.is_https ? 'modal-login' }}">{{ Translation('login') }}</a> {{ Translation('ou') }} <a href="{{ links.register }}" data-tray-tst="cadastro">{{ Translation('cadastre_se') }}</a>
+                {{ Translation('bem_vindo_central') }}, <a href="{{ links.login }}" data-tray-tst="login" class="{{ utils.is_https ? 'modal-login' }}" style="color: white !important;">{{ Translation('login') }}</a> {{ Translation('ou') }} <a href="{{ links.register }}" data-tray-tst="cadastro" style="color: white !important;">{{ Translation('cadastre_se') }}</a>
             </span>
         </div>
     </div>
