--- a/elements/header.html
+++ b/elements/header.html
@@ -6,7 +6,7 @@
   </div>
   <div class="menu-holder animated slideInDown">
     <div class="dropdown">
-      <a href="http://www.tecnomult.com/headset" class="dropbtn"><span class="orange-plus">+</span> Computadores</a>
+      <a href="http://www.tecnomult.com/headset" class="dropbtn"><span class="orange-plus">+</span> COMPUTADORES</a>
     </div>
     <div class="dropdown">
       <a href="http://www.tecnomult.com/headset" class="dropbtn"><span class="orange-plus">+</span> HEADSET</a>
