--- a/elements/header.html
+++ b/elements/header.html
@@ -9,6 +9,16 @@
       <a href="http://www.tecnomult.com/headset" class="dropbtn"><span class="orange-plus">+</span> COMPUTADORES</a>
     </div>
     <div class="dropdown">
+      <a href="http://www.tecnomult.com/monitor" class="dropbtn"><span class="orange-plus">+</span> MONITOR</a>
+      <div class="dropdown-content animated fadeIn">
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=ACER&order=3&categoria=31">ACER</a>
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=ASUS&order=3&categoria=31">ASUS</a>
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=PHILIPS&order=3&categoria=31">PHILIPS</a>
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=SAMSUNG&order=3&categoria=31">SAMSUNG</a>
+        <a href="http://www.tecnomult.com/monitor?loja=657632&palavra_busca=&filtrar_marca=ZOWIE&order=3&categoria=31">ZOWIE</a>
+      </div>
+    </div>
+    <div class="dropdown">
       <a href="http://www.tecnomult.com/headset" class="dropbtn"><span class="orange-plus">+</span> HEADSET</a>
       <div class="dropdown-content animated fadeIn">
         <a href="http://www.tecnomult.com/headset?loja=657632&palavra_busca=&filtrar_marca=ASTRO&order=3&categoria=25">ASTRO</a>
@@ -68,7 +78,6 @@
         <a href="http://www.tecnomult.com/gabinete">GABINETE</a>
         <a href="http://www.tecnomult.com/placasdevideo">PLACA DE VÍDEO</a>
         <a href="http://www.tecnomult.com/placamae">PLACA MÃE</a>
-        <a href="http://www.tecnomult.com/monitor">MONITOR</a>
         <a href="http://www.tecnomult.com/mousepad">MOUSEPAD</a>
       </div>
     </div>
