--- a/elements/snippets/customer-front.html
+++ b/elements/snippets/customer-front.html
@@ -3,7 +3,7 @@
         <div class="col-sm-7 col-md-6 login" data-tray-tst="saudacao">
             <span class="tray-hide" data-logged-user="true">
                 {{ Translation('bem_vindo_central') }} <span data-customer="name"></span>
-                <a class="costumer-logged-in" href="{{ links.logout }}" style="color: white !important;"><i class="fas sign-out-alt logout-icon"></i><br>{{ Translation('sair') }}</a>
+                <a class="costumer-logged-in" href="{{ links.logout }}" style="color: white !important;"><i class="fas fa-sign-out-alt logout-icon"></i><br>{{ Translation('sair') }}</a>
             </span>
             <span class="tray-hide" data-logged-user="false">
                 {{ Translation('bem_vindo_central') }}, <a href="{{ links.login }}" data-tray-tst="login" class="{{ utils.is_https ? 'modal-login' }}" style="color: white !important;">{{ Translation('login') }}</a> {{ Translation('ou') }} <a href="{{ links.register }}" data-tray-tst="cadastro" style="color: white !important;">{{ Translation('cadastre_se') }}</a>
