Added new banner

--- a/elements/header.html
+++ b/elements/header.html
@@ -1,4 +1,4 @@
-<section id="landpage" class="landpage">
+<section id="landpage" class="b1">
   <div id="header-bar" class="header-bar"></div>
 <div id="header" class="header">
   <div class="logo-holder animated slideInDown">
