--- a/elements/snippets/social-list.html
+++ b/elements/snippets/social-list.html
@@ -2,7 +2,7 @@
     {% if settings.facebook %}
     <li>
         <a href="https://www.facebook.com/{{ settings.facebook }}" target="_blank">
-            <img src="{{ asset('img/facebook.svg') }}" alt="Facebook" width="20" height="20">
+            <i class="fab fa-facebook" style="color: white; font-size: 20px;"></i>
             Facebook
         </a>
     </li>
