--- a/elements/footer.html
+++ b/elements/footer.html
@@ -47,7 +47,7 @@
                             <br>
                             {{ Translation('ag_telefone_2') }}
                             <br>
-                            <i class="fab fa-whatsapp"></i> (11) 94706-1505
+                            <i class="fab fa-whatsapp" style="color: white; font-size: 20px;"></i> (11) 94706-1505
                         </p>
                     </li>
                     {% endif %}
