--- a/elements/footer.html
+++ b/elements/footer.html
@@ -48,7 +48,7 @@
                             {{ Translation('ag_telefone_2') }}
                             <br>
                         </p>
-                        <i class="fab fa-whatsapp" style="color: white; font-size: 20px;"></i> (11) 94706-1505
+                        <span class="fab fa-whatsapp" style="color: white; font-size: 20px;"><p style="font-family: Roboto; color: #8c8c8c; font-size: 1.4rem;">(11) 94706-1505</p></span> 
                     </li>
                     {% endif %}
 
