--- a/elements/footer.html
+++ b/elements/footer.html
@@ -48,7 +48,7 @@
                             {{ Translation('ag_telefone_2') }}
                             <br>
                         </p>
-                        <span class="fab fa-whatsapp" style="color: ##9e9e9e; font-size: 29px; width: 144px; margin-left: 10px; margin-top: 10px;"><p style="font-family: Roboto; color: #8c8c8c; font-size: 1.4rem; margin-left: 10px;">(11) 94706-1505</p></span> 
+                        <span class="fab fa-whatsapp" style="color: #9e9e9e; font-size: 29px; width: 177px; margin-left: 10px; margin-top: 10px;"><p style="font-family: Roboto; color: #8c8c8c; font-size: 1.4rem; margin-left: 10px;">(11) 94706-1505</p></span> 
                     </li>
                     {% endif %}
 
