--- a/elements/header.html
+++ b/elements/header.html
@@ -109,3 +109,12 @@
 </div>
   </div>
 </section>
+<script>
+  function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
+</script>
