--- a/elements/header.html
+++ b/elements/header.html
@@ -6,6 +6,7 @@
   </div>
   <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="mobile-holder">
   <div class="dropdown">
     <a href="http://www.tecnomult.com/computadores" class="dropbtn"><span class="orange-plus">+</span> COMPUTADOR</a>
   </div>
@@ -61,6 +62,7 @@
       <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=STEELSERIES&order=3&categoria=47">STEELSERIES</a>
       <a href="http://www.tecnomult.com/teclado?loja=657632&palavra_busca=&filtrar_marca=THERMALTAKE&order=3&categoria=47">THERMALTAKE</a>
     </div>
+  </div>
   </div>
   <div class="dropdown">
     <a href="http://www.tecnomult.com/cadeira" class="dropbtn"><span class="orange-plus">+</span> CADEIRA</a>
