--- a/elements/header.html
+++ b/elements/header.html
@@ -71,7 +71,7 @@
     </div>
   </div>
   <div class="dropdown">
-    <a href="#"><button class="dropbtn"><span class="orange-plus">+</span> OUTRAS</button></a>
+    <a href="#" class="dropbtn"><span class="orange-plus">+</span> OUTRAS</a>
     <div class="dropdown-content animated fadeIn">
       <a href="http://www.tecnomult.com/webcam">WEBCAM</a>
       <a href="http://www.tecnomult.com/cooler">COOLER</a>
