--- a/css/custom.css.html
+++ b/css/custom.css.html
@@ -3,7 +3,7 @@ Theme Name: Yart Default
 Theme URI:
 Author: Lincon Keiti Kusunoki
 License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+License URI: https://www.gnu.org/licenses/gpl-2.0.html
 */
 
 /* color buy button on page product */
