--- a/elements/snippets/price.html
+++ b/elements/snippets/price.html
@@ -7,7 +7,7 @@
                 <p>Produto Sob Consulta</p>
             {% else %}
 
-                <div class="prices" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                <div class="prices" itemprop="offers" itemscope itemtype="https://schema.org/Offer">
                     {% if product.has_variation %}
                         <span class="price-various"></span>
                     {% endif %}
