--- a/pages/product.html
+++ b/pages/product.html
@@ -4,7 +4,7 @@
     </div>
 {% endif %}
 
-<section id="product-container" class="produto-wrapper product-detail" itemscope itemtype="http://schema.org/Product">
+<section id="product-container" class="produto-wrapper product-detail" itemscope itemtype="https://schema.org/Product">
     {% element 'schema/product' {'product': product} %}
     <div class="clearfix">
 
