--- a/configs/settings.html
+++ b/configs/settings.html
@@ -376,14 +376,14 @@
             <div class="col-sm-3">
                 <h4>Menu na lateral Esquerda</h4>
                 <label for="structure-1">
-                    <img src="httpss://images1.tcdn.com.br/assets/store/img/structure/structure-1.png">
+                    <img src="https://images1.tcdn.com.br/assets/store/img/structure/structure-1.png">
                     <input type="radio" name="structure" value="1" id="structure-1">
                 </label>
             </div>
             <div class="col-sm-3">
                 <h4>Menu na lateral Direita</h4>
                 <label for="structure-2">
-                    <img src="httpss://images1.tcdn.com.br/assets/store/img/structure/structure-2.png">
+                    <img src="https://images1.tcdn.com.br/assets/store/img/structure/structure-2.png">
                     <input type="radio" name="structure" value="2" id="structure-2">
                 </label>
             </div>
