added new category header

--- a/elements/header-small.html
+++ b/elements/header-small.html
@@ -71,6 +71,9 @@
     </div>
   </div>
   <div class="dropdown">
+    <a href="https://www.tecnomult.com/placasdevideo" class="dropbtn"><span class="orange-plus">+</span> PLACA DE VÍDEO</a>
+  </div>
+  <div class="dropdown">
     <a href="#" class="dropbtn"><span class="orange-plus">+</span> OUTRAS</a>
     <div class="dropdown-content animated fadeIn">
       <a href="https://www.tecnomult.com/webcam">WEBCAM</a>
@@ -79,7 +82,6 @@
       <a href="https://www.tecnomult.com/fonte">FONTE</a>
       <a href="https://www.tecnomult.com/hd">HD</a>
       <a href="https://www.tecnomult.com/gabinete">GABINETE</a>
-      <a href="https://www.tecnomult.com/placasdevideo">PLACA DE VÍDEO</a>
       <a href="https://www.tecnomult.com/placamae">PLACA MÃE</a>
       <a href="https://www.tecnomult.com/mousepad">MOUSEPAD</a>
     </div>
