--- a/elements/header.html
+++ b/elements/header.html
@@ -152,6 +152,9 @@
       </div>
     </div>
     <div class="dropdown">
+      <a href="https://www.tecnomult.com/placasdevideo" class="dropbtn"><span class="orange-plus">+</span> PLACA DE VÍDEO</a>
+    </div>
+    <div class="dropdown">
       <button class="dropbtn"><span class="orange-plus">+</span> OUTRAS</button>
       <div class="dropdown-content animated fadeIn">
         <a href="https://www.tecnomult.com/webcam">WEBCAM</a>
