--- a/elements/header-small.html
+++ b/elements/header-small.html
@@ -38,7 +38,7 @@
     <a href="https://www.tecnomult.com/mouse" class="dropbtn"><span class="orange-plus">+</span> MOUSE</a>
     <div class="dropdown-content animated fadeIn">
       <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=45">CORSAIR</a>
-      <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=45">HYPER X</a>
+      <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=HYPERX&order=3&categoria=45">HYPER X</a>
       <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=LOGITECH&order=3&categoria=45">LOGITECH</a>
       <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=MOTOSPEED&order=3&categoria=45">MOTOSPEED</a>
       <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=RAZER&order=3&categoria=45">RAZER</a>
@@ -120,7 +120,7 @@
       <a href="https://www.tecnomult.com/mouse" class="dropbtn"><span class="orange-plus">+</span> MOUSE</a>
       <div class="dropdown-content animated fadeIn">
         <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=45">CORSAIR</a>
-        <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=CORSAIR&order=3&categoria=45">HYPER X</a>
+        <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=HYPERXX&order=3&categoria=45">HYPER X</a>
         <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=LOGITECH&order=3&categoria=45">LOGITECH</a>
         <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=MOTOSPEED&order=3&categoria=45">MOTOSPEED</a>
         <a href="https://www.tecnomult.com/mouse?loja=657632&palavra_busca=&filtrar_marca=RAZER&order=3&categoria=45">RAZER</a>
