--- a/css/custom.css.html
+++ b/css/custom.css.html
@@ -3,7 +3,7 @@ Theme Name: Yart Default
 Theme URI:
 Author: Lincon Keiti Kusunoki
 License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+License URI: https://www.gnu.org/licenses/gpl-2.0.html
 */
 
 /* color buy button on page product */
@@ -74,7 +74,7 @@ html .botao-commerce:link,
 /* footer */
 .foo-content,
 .foo-message{
-    background: {{ settings.color_footer }};
+    background: #090909;
 }
 
 .foo-content h3,
@@ -97,7 +97,7 @@ html .botao-commerce:link,
 
 /* background color */
 .application{
-    background-color: {{ settings.color_background }};
+    background-color: #0c0c0c;
     background-attachment: {{ settings.bg_attachment }};
     background-position-x: {{ settings.bg_position_x }};
     background-position-y: {{ settings.bg_position_y }};
