--- a/elements/showcase.html
+++ b/elements/showcase.html
@@ -1,20 +1,16 @@
 {% if products|length > 0 %}
     <div class="showcase clearfix" data-tray-tst="vitrine_home">
-        <h2>
-            <small>{{ Translation('confira_tambem') }}</small>
-            <strong>{{ showcaseTitle }}</strong>
-        </h2>
         <ul class="row">
         {% for product in products %}
             {% set ranking = product.ranking %}
-            <li class="col-sm-4" data-tray-tst="vitrine_produto">
+            <li class="col-sm-4 products-item-each" data-tray-tst="vitrine_produto">
                 {% element 'snippets/product' {"product": product} %}
             </li>
-            
-            {% if loop.index is divisible by(3) %}
+
+            {% if loop.index is divisible by(4) %}
                 </ul><ul class="row">
             {% endif %}
-            
+
         {% endfor %}
         </ul>
     </div>
