--- a/elements/snippets/social-list.html
+++ b/elements/snippets/social-list.html
@@ -2,7 +2,7 @@
     {% if settings.facebook %}
     <li>
         <a href="https://www.facebook.com/{{ settings.facebook }}" target="_blank">
-            <img src="{{ asset('img/facebook.svg') }}" alt="Facebook" width="20" height="20">
+            <i class="fab fa-facebook" style="color: white; font-size: 20px;"></i>
             Facebook
         </a>
     </li>
@@ -29,7 +29,7 @@
     {% if settings.youtube %}
     <li>
         <a href="https://www.youtube.com/{{ settings.youtube }}" target="_blank">
-            <img src="{{ asset('img/youtube.svg') }}" alt="Youtube" width="20" height="20">
+          <i class="fab fa-youtube" style="color: white; font-size: 20px;"></i>
             YouTube
         </a>
     </li>
@@ -47,7 +47,7 @@
     {% if settings.instagram %}
     <li>
         <a href="https://www.instagram.com/{{ settings.instagram }}" target="_blank">
-            <img src="{{ asset('img/instagram.svg') }}" alt="Instagram" width="20" height="20">
+            <i class="fab fa-instagram" style="color: white; font-size: 20px;"></i>
             Instagram
         </a>
     </li>
